--- a/.github/workflows/filter-test2.yml
+++ b/.github/workflows/filter-test2.yml
@@ -30,4 +30,4 @@ jobs:
             - '**'
     - name: Lint Markdown
       if: ${{ steps.filter.outputs.changed == 'true' }}
-      run: echo ${{ steps.filter.outputs.changed_files }}
+      run: python3 .github/filterpaths ${{ github.event.pull_request.title }} ${{ steps.filter.outputs.changed_files }}
