Update and rename filter-test2.yml to filter-test-dev.yml

--- a/.github/workflows/filter-test-dev.yml
+++ b/.github/workflows/filter-test-dev.yml
@@ -1,4 +1,4 @@
-name: filtertest
+name: Filter Test Dev
 
 on:
   pull_request:
@@ -30,4 +30,4 @@ jobs:
             - '**'
     - name: Lint Markdown
       if: ${{ steps.filter.outputs.changed == 'true' }}
-      run: python3 .github/filterpaths ${{ github.event.pull_request.title }} ${{ steps.filter.outputs.changed_files }}
+      run: python3 bin/filterpaths ${{ github.event.pull_request.title }} ${{ steps.filter.outputs.changed_files }}
