--- a/.github/workflows/filter-test-dev.yml
+++ b/.github/workflows/filter-test-dev.yml
@@ -2,6 +2,8 @@ name: Filter Test Dev
 
 on:
   pull_request:
+    types:
+      - labeled
 
 # hack for https://github.com/actions/cache/issues/810#issuecomment-1222550359
 #env:
@@ -12,6 +14,7 @@ jobs:
     name: detect what files changed
     runs-on: ubuntu-20.04
     timeout-minutes: 3
+    if: ${{ github.event.label.name == 'submission' }}
     steps:
     - uses: dorny/paths-filter@v2
       id: filter
@@ -30,4 +33,4 @@ jobs:
             - '**'
     - name: Lint Markdown
       if: ${{ steps.filter.outputs.changed == 'true' }}
-      run: python3 bin/filterpaths ${{ github.event.pull_request.title }} ${{ steps.filter.outputs.changed_files }}
+      run: python3 bin/filterpaths.py ${{ github.event.pull_request.title }} ${{ steps.filter.outputs.changed_files }}
