--- a/.github/workflows/filter-test-dev.yml
+++ b/.github/workflows/filter-test-dev.yml
@@ -2,8 +2,6 @@ name: Filter Test Dev
 
 on:
   pull_request:
-    types:
-      - labeled
 
 # hack for https://github.com/actions/cache/issues/810#issuecomment-1222550359
 #env:
@@ -11,13 +9,15 @@ on:
 
 jobs:
   files-changed:
-    name: detect what files changed
+    name: Detect what files changed
+    if: contains(github.event.pull_request.labels.*.name, 'submission')  # ${{ github.event.label.name == 'submission' }}
     runs-on: ubuntu-20.04
     timeout-minutes: 3
-    if: ${{ github.event.label.name == 'submission' }}
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+
     - uses: dorny/paths-filter@v2
       id: filter
       with:
@@ -33,6 +33,9 @@ jobs:
         filters: |
           changed:
             - '**'
+    - name: Check label
+      run: echo ${{ github.event.label.name }}
+
     - name: Lint Markdown
       if: ${{ steps.filter.outputs.changed == 'true' }}
       run: python3 bin/filterpaths.py ${{ github.event.pull_request.title }} ${{ steps.filter.outputs.changed_files }}
