--- a/.github/workflows/filter-test-dev.yml
+++ b/.github/workflows/filter-test-dev.yml
@@ -2,6 +2,7 @@ name: Filter Test Dev
 
 on:
   pull_request:
+    - labeled
 
 # hack for https://github.com/actions/cache/issues/810#issuecomment-1222550359
 #env:
