--- a/bin/build
+++ b/bin/build
@@ -100,3 +100,6 @@ bundle exec jekyll build --future
 # Delete and move files
 find . -maxdepth 1 ! -name '_site' ! -name '.git' ! -name 'CNAME' ! -name '.gitignore' -exec rm -rf {} \;
 zip -r site.zip _site/
+mkdir site_out
+mv site.zip site_out/
+exit 0
