--- a/bin/build
+++ b/bin/build
@@ -25,6 +25,10 @@ while [[ $# > 0 ]]; do
         SRC_BRANCH="$2"
         shift
         ;;
+        --slug)
+        SLUG="$2"
+        shift
+        ;;
         -d|--deploy)
         DEPLOY_BRANCH="$2"
         shift
@@ -93,6 +97,13 @@ git checkout -b $DEPLOY_BRANCH
 
 # Export JEKYLL_ENV=production
 export JEKYLL_ENV=production
+
+# CHARLIE SEP 29 2023:
+# BEFORE BUILDING, WE NEED TO CHANGE THE _config.yaml URL, OTHERWISE THE WEBSITE IS MESSY
+python -c 'import yaml;f=open("_config.yml");y=yaml.safe_load(f);y["url"] = ""; print(yaml.dump(y, default_flow_style=False, sort_keys=False))'
+python -c 'import yaml;f=open("_config.yml");y=yaml.safe_load(f);y["baseurl"] = "$SLUG"; print(yaml.dump(y, default_flow_style=False, sort_keys=False))'
+
+cat _config.yml
 
 # Build site
 bundle exec jekyll build --future
