--- a/bin/build
+++ b/bin/build
@@ -99,9 +99,9 @@ git checkout -b $DEPLOY_BRANCH
 export JEKYLL_ENV=production
 
 # CHARLIE SEP 29 2023:
-# BEFORE BUILDING, WE NEED TO CHANGE THE _config.yaml URL, OTHERWISE THE WEBSITE IS MESSY
-python -c 'import yaml;f=open("_config.yml");y=yaml.safe_load(f);y["url"] = ""; print(yaml.dump(y, default_flow_style=False, sort_keys=False))'
-python -c 'import yaml;f=open("_config.yml");y=yaml.safe_load(f);y["baseurl"] = "$SLUG"; print(yaml.dump(y, default_flow_style=False, sort_keys=False))'
+# BEFORE BUILDING, WE NEED TO CHANGE THE _config.yaml URL, OTHERWISE THE WEBSITE URLS ARE ALL WRONG
+python -c 'import yaml;f=open("_config.yml");y=yaml.safe_load(f);y["url"] = ""; outfile=open('data.yml', 'w'); yaml.dump(y, outfile, default_flow_style=False, sort_keys=False)'
+python -c 'import yaml;f=open("_config.yml");y=yaml.safe_load(f);y["baseurl"] = "$SLUG"; ; outfile=open('data.yml', 'w'); yaml.dump(y, outfile, default_flow_style=False, sort_keys=False)'
 
 cat _config.yml
 
