--- a/bin/build
+++ b/bin/build
@@ -100,8 +100,9 @@ export JEKYLL_ENV=production
 
 # CHARLIE SEP 29 2023:
 # BEFORE BUILDING, WE NEED TO CHANGE THE _config.yaml URL, OTHERWISE THE WEBSITE URLS ARE ALL WRONG
-python -c 'import yaml;f=open("_config.yml");y=yaml.safe_load(f);y["url"] = ""; outfile=open('data.yml', 'w'); yaml.dump(y, outfile, default_flow_style=False, sort_keys=False)'
-python -c 'import yaml;f=open("_config.yml");y=yaml.safe_load(f);y["baseurl"] = "$SLUG"; ; outfile=open('data.yml', 'w'); yaml.dump(y, outfile, default_flow_style=False, sort_keys=False)'
+echo $SLUG
+python -c 'import yaml;f=open("_config.yml");y=yaml.safe_load(f);y["url"] = ""; outfile=open('_config.yml', 'w'); yaml.dump(y, outfile, default_flow_style=False, sort_keys=False)'
+python -c 'import yaml;f=open("_config.yml");y=yaml.safe_load(f);y["baseurl"] = "$SLUG"; ; outfile=open('_config.yml', 'w'); yaml.dump(y, outfile, default_flow_style=False, sort_keys=False)'
 
 cat _config.yml
 
