--- a/bin/build
+++ b/bin/build
@@ -101,8 +101,8 @@ export JEKYLL_ENV=production
 # CHARLIE SEP 29 2023:
 # BEFORE BUILDING, WE NEED TO CHANGE THE _config.yaml URL, OTHERWISE THE WEBSITE URLS ARE ALL WRONG
 echo $SLUG
-python -c 'import yaml;f=open("_config.yml");y=yaml.safe_load(f);y["url"] = ""; outfile=open('_config.yml', 'w'); yaml.dump(y, outfile, default_flow_style=False, sort_keys=False)'
-python -c 'import yaml;f=open("_config.yml");y=yaml.safe_load(f);y["baseurl"] = "$SLUG"; ; outfile=open('_config.yml', 'w'); yaml.dump(y, outfile, default_flow_style=False, sort_keys=False)'
+python -c 'import yaml;f=open("_config.yml");y=yaml.safe_load(f);y["url"] = ""; outfile=open("_config.yml", "w"); yaml.dump(y, outfile, default_flow_style=False, sort_keys=False)'
+python -c 'import yaml;f=open("_config.yml");y=yaml.safe_load(f);y["baseurl"] = "$SLUG"; ; outfile=open("_config.yml", "w"); yaml.dump(y, outfile, default_flow_style=False, sort_keys=False)'
 
 cat _config.yml
 
