--- a/.github/workflows/filter-test-dev.yml
+++ b/.github/workflows/filter-test-dev.yml
@@ -39,6 +39,7 @@ jobs:
       run: echo ${{ github.event.label.name }}
 
     - name: Check if changed files fit our filters
+      id: pythonfilter
       if: ${{ steps.filter.outputs.changed == 'true' }}
       # todo read from step below
       run: python3 bin/filterpaths.py ${{ github.event.pull_request.title }} ${{ steps.filter.outputs.changed_files }}
@@ -64,12 +65,14 @@ jobs:
         fi
         echo "DEPLOY_BRANCH=gh-pages" >> $GITHUB_OUTPUT
     - name: Deploy website 
+      if: steps.pythonfilter.outputs.exit_code == 0
       run:  yes | bash bin/build --verbose ${{ steps.setup.outputs.NO_PUSH }}
                     --src ${{ steps.setup.outputs.SRC_BRANCH }} 
                     --deploy ${{ steps.setup.outputs.DEPLOY_BRANCH }} 
                     --slug ${{ github.event.pull_request.title }}
                     
     - name: Use the Upload Artifact GitHub Action
+      if: steps.pythonfilter.outputs.exit_code == 0
       uses: actions/upload-artifact@v2
       with: 
         name: website_out
