--- a/.github/workflows/filter-test-dev.yml
+++ b/.github/workflows/filter-test-dev.yml
@@ -44,7 +44,7 @@ jobs:
       # todo read from step below
       run: python3 bin/filterpaths.py ${{ github.event.pull_request.title }} ${{ steps.filter.outputs.changed_files }}
     - uses: actions/github-script@v6
-      if: steps.pythonfilter.outcome == 'failure'
+      if: always() && steps.pythonfilter.outcome == 'failure'
       with:
         script: |
           github.rest.issues.createComment({
