--- a/.github/workflows/filter-test-dev.yml
+++ b/.github/workflows/filter-test-dev.yml
@@ -2,7 +2,7 @@ name: Filter
 
 on:
   pull_request:
-    types: [labeled]
+    # types: [labeled]
 
 # hack for https://github.com/actions/cache/issues/810#issuecomment-1222550359
 #env:
