--- a/.github/workflows/deploy-for-review.yml
+++ b/.github/workflows/deploy-for-review.yml
@@ -40,5 +40,4 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-1
-      - run: |
-        aws s3 sync --region eu-west-1 --acl public-read _site s3://iclr-blogposts-2024/${{ github.event.pull_request.title }}
+      - run: aws s3 sync --region eu-west-1 --acl public-read _site s3://iclr-blogposts-2024/${{ github.event.pull_request.title }}
