--- a/.github/workflows/deploy-for-review.yml
+++ b/.github/workflows/deploy-for-review.yml
@@ -13,26 +13,13 @@ jobs:
       github.event.workflow_run.event == 'pull_request' &&
       github.event.workflow_run.conclusion == 'success'
     steps:
-      - name: 'Download artifact'
-        uses: actions/github-script@v3.1.0
+      - name: Download build artifact from triggered workflow
+        uses: dawidd6/action-download-artifact@v2
         with:
-          script: |
-            var artifacts = await github.actions.listWorkflowRunArtifacts({
-               owner: context.repo.owner,
-               repo: context.repo.repo,
-               run_id: ${{github.event.workflow_run.id }},
-            });
-            var matchArtifact = artifacts.data.artifacts.filter((artifact) => {
-              return artifact.name == "website_out"
-            })[0];
-            var download = await github.actions.downloadArtifact({
-               owner: context.repo.owner,
-               repo: context.repo.repo,
-               artifact_id: matchArtifact.id,
-               archive_format: 'zip',
-            });
-            var fs = require('fs');
-            fs.writeFileSync('${{github.workspace}}/site.zip', Buffer.from(download.data));
+          run_id: ${{ github.event.workflow_run.id }}
+          name: BuildArtifact
+          path: ./site_out
+          search_artifacts: true
       - run: unzip site.zip
       - name: Setup AWS CLI
         uses: aws-actions/configure-aws-credentials@v4
