--- a/.github/workflows/deploy-for-review.yml
+++ b/.github/workflows/deploy-for-review.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           run_id: ${{ github.event.workflow_run.id }}
           # name: website_out
-          path: site_out
+          # path: site_out
           search_artifacts: true
       - run: unzip site.zip
       - name: Setup AWS CLI
