--- a/.github/workflows/deploy-for-review.yml
+++ b/.github/workflows/deploy-for-review.yml
@@ -21,10 +21,13 @@ jobs:
           # path: site_out
           search_artifacts: true
       - run: unzip website_out/site.zip
+      # set the SLUG environment variable to the contests of website_out/slug.txt
+      - name: Set SLUG
+        run: echo "SLUG=$(cat website_out/slug.txt)" >> $GITHUB_ENV
       - name: Setup AWS CLI
         uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-1
-      - run: aws s3 sync --region eu-west-1 --acl public-read _site s3://iclr-blogposts-2024/${{ github.event.pull_request.title }}
+      - run: aws s3 sync --region eu-west-1 --acl public-read _site s3://iclr-blogposts-2024/${{env.SLUG}}
