--- a/.github/workflows/filter-test-dev.yml
+++ b/.github/workflows/filter-test-dev.yml
@@ -44,7 +44,7 @@ jobs:
       run: echo ${{ github.event.label.name }}
     - name: Save title slug
       run: echo "SLUG=slugify ${{ github.event.pull_request.title }}" >> $GITHUB_ENV
-    - run: echo $SLUG
+    - run: echo ${{env.SLUG}}
     # - name: Check if changed files fit our filters
     #   id: pythonfilter
     #   if: ${{ steps.filter.outputs.changed == 'true' }}
