--- a/bin/build
+++ b/bin/build
@@ -113,5 +113,6 @@ bundle exec jekyll build --future
 find . -maxdepth 1 ! -name '_site' ! -name '.git' ! -name 'CNAME' ! -name '.gitignore' -exec rm -rf {} \;
 zip -r site.zip _site/
 mkdir site_out
+echo $SLUG > site_out/slug.txt
 mv site.zip site_out/
 exit 0
