--- a/.github/workflows/filter-test-dev.yml
+++ b/.github/workflows/filter-test-dev.yml
@@ -24,7 +24,7 @@ jobs:
     - uses: actions/setup-python@v4
       with:
         python-version: '3.10' 
-    - run: pip install python-slugify
+    - run: pip install python-slugify pyyaml
     - uses: dorny/paths-filter@v2
       id: filter
       with:
