--- a/.github/workflows/deploy-for-review.yml
+++ b/.github/workflows/deploy-for-review.yml
@@ -32,7 +32,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-1
-      - run: aws s3 sync --region eu-west-1 --acl public-read _site s3://iclr-blogposts-2024/${{env.SLUG}}
+      - run: aws s3 sync --region eu-west-1 --acl public-read _site s3://iclr-blogposts-2024/${{env.SLUG}}-${{env.ISSUE_NUMBER}}
       - uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -41,5 +41,5 @@ jobs:
               issue_number: ${{ env.ISSUE_NUMBER }},
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '👋 Thanks for your submission! We have successfully built your website and we will push it shortly to the URL https://iclr-blogposts-2024.s3.us-west-1.amazonaws.com/${{env.SLUG}}/blog/${{env.SLUG}}/index.html !'
+              body: '👋 Thanks for your submission! We have successfully built your website and we will push it shortly to the URL https://iclr-blogposts-2024.s3.us-west-1.amazonaws.com/${{env.SLUG}}-${{env.ISSUE_NUMBER}}/blog/${{env.SLUG}}/index.html !'
             })
